# markitdown-vision-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  e2e_test.py
docs/plans/: 2026-02-05-page-locator-design.md
service/: README.md  pyproject.toml
service/app/: __init__.py  config.py  main.py
service/app/converters/: __init__.py  image_describer.py  pdf_extractor.py  pipeline.py
service/app/models/: __init__.py  schemas.py  task.py
service/app/routes/: __init__.py  health.py  tasks.py
service/app/utils/: database.py
service/app/workers/: __init__.py  janitor.py  task_queue.py  webhook.py
service/tests/: conftest.py  test_health.py  test_tasks.py
