[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown-vision-service"
version = "0.1.0"
description = "A Dockerized Python service that converts documents to Markdown with optional LLM-powered image descriptions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "ulid-py>=1.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pdfplumber>=0.10.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
